feat: added Functionalities to the UI

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                 </a>
             </div>
 
-            <button type="submit" class="displayItems-clear">clear items</button>
         </div>
+        <button type="submit" class="displayItems-clear">clear items</button>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
